apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30080
